--- a/package.json
+++ b/package.json
@@ -4,16 +4,20 @@
   "description": "A system to authenticate users",
   "main": "index.js",
   "scripts": {
-    "start": "node ./src/index.js",
+    "create:test:db": "NODE_ENV=test sequelize db:create",
+    "drop:test:db": "NODE_ENV=test sequelize db:drop",
+    "build": "rm -rf ./build && babel src -d build",
+    "start": "node ./build/index.js",
     "start:dev": "nodemon ./src/index.js --exec babel-node",
     "migrate": "sequelize db:migrate",
+    "undo:test:migration": "NODE_ENV=test sequelize db:migrate:undo:all",
     "migrate:test": "NODE_ENV=test sequelize db:migrate",
     "seed:table": "sequelize db:seed:all",
-    "seed:test:table": "NODE_ENV=test sequelize db:seed:all",
+    "seed:test": "NODE_ENV=test sequelize db:seed:all",
     "delete:seed": "sequelize db:seed:undo:all",
-    "refresh:db": "npm run delete:seed && npm run seed:table",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "create:test:db": "NODE_ENV=test sequelize db:create"
+    "delete:seed:test": "NODE_ENV=test sequelize db:seed:undo:all",
+    "refresh:test:db": "npm run undo:test:migration && npm run migrate:test && npm run delete:seed:test && npm run seed:test",
+    "test": "npm run refresh:test:db && NODE_ENV=test mocha --require babel-polyfill --require @babel/register ./src/tests/**/*.js --exit"
   },
   "repository": {
     "type": "git",
@@ -29,22 +33,29 @@
   },
   "homepage": "https://github.com/Simplemart17/authentication-system#readme",
   "dependencies": {
+    "@babel/cli": "^7.7.0",
     "@babel/core": "^7.7.2",
     "@babel/node": "^7.7.0",
     "@babel/preset-env": "^7.7.1",
+    "@babel/register": "^7.7.0",
     "@sendgrid/mail": "^6.4.0",
+    "babel-polyfill": "^6.26.0",
     "bcrypt": "^3.0.7",
     "body-parser": "^1.19.0",
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "mocha": "^6.2.2",
     "nodemon": "^1.19.4",
     "pg": "^7.12.1",
     "pg-hstore": "^2.3.3",
     "sequelize": "^5.21.2",
     "sequelize-cli": "^5.5.1",
-    "uuid": "^3.3.3"
+    "uuid": "^3.3.3",
+    "validatorjs": "^3.17.1"
   },
   "devDependencies": {
     "eslint": "^6.6.0",
